WebCore:

Reviewed by Simon Fraser.

        - fix https://bugs.webkit.org/show_bug.cgi?id=24130
          <rdar://problem/6618196> Paint very slow when horizontally resizing

        Test: fast/gradients/background-clipped.html

        * rendering/RenderBoxModelObject.cpp:
        (WebCore::RenderBoxModelObject::paintFillLayerExtended): Intersect the
        destination rectangle passed to drawTiledImage() with the dirty
        rectangle. This makes it more likely for the destination rect to be
        contained in a single tile rect, which results in a faster code path
        being taken down the road (just drawing a single tile instead of
        tiling).

LayoutTests:

        Reviewed by Simon Fraser.

        - test for https://bugs.webkit.org/show_bug.cgi?id=24130
          <rdar://problem/6618196> Paint very slow when horizontally resizing

        * fast/gradients/background-clipped.html: Added.
        * platform/mac/fast/gradients/background-clipped-expected.checksum: Added.
        * platform/mac/fast/gradients/background-clipped-expected.png: Added.
        * platform/mac/fast/gradients/background-clipped-expected.txt: Added.



Canonical link: https://commits.webkit.org/33313@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@41238 268f45cc-cd09-0410-ab3c-d52691b4dbfc